--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,23 +1,20 @@
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3306/cboard
-jdbc_username=root
-jdbc_password=111111
+jdbc.url=${jdbc.url}
+jdbc.username=${jdbc.username}
+jdbc.password=${jdbc.password}
 
-# Service configuration
 dataprovider.resultLimit=300000
 admin_user_id=1
-phantomjs_path=D:/phantomjs-2.1.1-windows/bin/phantomjs.exe
-web_port=8026
-web_context=
+phantomjs.path=${phantomjs.path}
+web.port=${web.port}
+web.context=
 
-mail.smtp.host=127.0.0.1
-mail.smtp.port=8825
-mail.smtp.from=test@test.com
-#mail.smtp.username=test@test.com
-#mail.smtp.password=111111
-#mail.smtp.ssl.checkserveridentity=false
+mail.smtp.host=${mail.smtp.host}
+mail.smtp.port=${mail.smtp.port}
+mail.smtp.from=${mail.smtp.from}
+mail.smtp.username=${mail.smtp.username}
+mail.smtp.password=${mail.smtp.password}
+mail.smtp.ssl.checkserveridentity=${mail.smtp.ssl.checkserveridentity}
 
-
-# Cache Properties
-cache.redis.hostName=127.0.0.1
-cache.redis.port=6379
+cache.redis.hostName=${cache.redis.hostName}
+cache.redis.port=${cache.redis.port}
